logs/whatsapp-parser.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/whatsapp_parser-1.0.2.egg-info'...
Listing './lib/python3.5/site-packages/wp_parser'...
Compiling './lib/python3.5/site-packages/wp_parser/ChatFeatures.py'...
***   File "./lib/python3.5/site-packages/wp_parser/ChatFeatures.py", line 137
    print "This should never happen"
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/wp_parser/datelib.py'...
***   File "./lib/python3.5/site-packages/wp_parser/datelib.py", line 57
    print "Fix me! Invalid date"
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/wp_parser/parsers'...
Compiling './lib/python3.5/site-packages/wp_parser/wp_chat.py'...
***   File "./lib/python3.5/site-packages/wp_parser/wp_chat.py", line 27
    print " " * (depth - 1) * 2, parent
            ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
